Quan_setting_and_editing_context

--- a/frontend/src/components/Layout/ReadLayout/Header/Header.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Header/Header.module.scss
@@ -3,5 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 4px solid #9d98c6;
 }
