--- a/frontend/src/components/Layout/ReadLayout/ReadLayout.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/ReadLayout.module.scss
@@ -3,3 +3,12 @@
     display: flex;
     flex-direction: column;
 }
+.container
+{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(242, 245, 248);
+}
