--- a/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
@@ -11,7 +11,7 @@
     border-bottom: 1px solid rgb(216, 220, 223);
     display: flex;
     flex-direction: row;
-    padding: 10px;
+    // padding: 10px 0 10px 0;
 }
 .action{
     position: fixed;
