--- a/frontend/src/components/Layout/DefaultLayout/Header/Header.css
+++ b/frontend/src/components/Layout/DefaultLayout/Header/Header.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
+    max-width: 90%;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -95,27 +95,22 @@ body {
     position: absolute;
     top: 35px;
     right: 0;
-    background-color: white;
+    background-color: rgb(255, 242, 250);
     border: 1px solid #e9ecef;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 200px;
-    max-height: 200px;
+    width: 400px;
+    max-height: 400px;
     overflow-y: auto;
     z-index: 1000;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #f393cb #ffe0f0;
 }
 
 .header__history-list {
-    position: absolute;
-    top: 35px;
-    right: 0;
-    background-color: white;
-    border: 1px solid #e9ecef;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     list-style: none;
     margin: 0;
     padding: 10px;
-    width: 200px;
-    z-index: 1000;
 }
 
 .header__history-item {
@@ -125,4 +120,9 @@ body {
 
 .header__history-item:last-child {
     border-bottom: none;
+}
+
+.history-item__card-info {
+    padding: 10px 10px;
+    margin-left: 10px;
 }
