Quan_Refactor_Code_ReadChapter (#35)

--- a/frontend/src/components/Layout/ReadLayout/Header/Header.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Header/Header.module.scss
@@ -3,7 +3,8 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-top: 10px;
+    padding-top: 10px;
     padding-bottom: 10px;
-    border-bottom: 4px solid #9d98c6;
+    border-bottom:1px solid #e9ecef;
+    background-color: #f8f9fa;
 }
