--- a/frontend/src/components/Layout/ReadLayout/ReadLayout.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/ReadLayout.module.scss
@@ -10,5 +10,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(242, 245, 248);
+}
+.footer
+{
+    margin-top: 30px;
 }
