--- a/frontend/src/components/Layout/ReadLayout/components/ButtonReadPage/ButtonReadPage.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/components/ButtonReadPage/ButtonReadPage.module.scss
@@ -9,7 +9,7 @@
     cursor: pointer;
     min-width: 50px;    
     display: flex;
-    height: 40px;
+    height: var(--height-button);
     justify-content: center;
     align-items: center;
 }
