--- a/frontend/src/components/GlobalStyles/GlobalStyles.scss
+++ b/frontend/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,7 +1,8 @@
 @import 'normalize.css';
 :root{
-    --color-hover: #9f98f3;
-    --color-button:#7c74da;
+    --color-hover: #e664a0be;
+    --color-button:#cc0e67be;
+    --height-button:50px;
 }
 html{
     padding: 0px;
