--- a/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: row;
     // padding: 10px 0 10px 0;
+    box-shadow:0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    padding: 10px;
 }
 .action{
     position: fixed;
