--- a/frontend/src/components/Layout/ReadLayout/components/DomainSetting/DomainSetting.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/components/DomainSetting/DomainSetting.module.scss
@@ -2,14 +2,14 @@
 {
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 290px;
     border-radius: 10%;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
     position: absolute;
     z-index: 0;
     // top: 110%;
     top:110%;
-    right: -100%;
+    right: -50%;
     animation: fadeInDown 0.5s ease forwards;
     background-color: white;
 
@@ -44,7 +44,7 @@
     font-size: 20px;
     border-radius: 5px;
     height: 40px;
-    width: 90px;
+    width: 110px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,13 +64,13 @@
 .list
 {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Tạo hai cột bằng độ rộng tự động */
+    grid-template-columns: repeat(2, 2fr); /* Tạo hai cột bằng độ rộng tự động */
     gap: 10px;
     margin: 20px 5px 20px 5px;
     padding-top: 5px;
     max-height: 300px; /* Giới hạn chiều cao của danh sách là 300px */
     overflow-x: auto;
-    border-top: 2px solid #9d98c6;
+    border-top: 2px solid var(--color-hover);
 
 }
 .active
