--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -121,3 +121,18 @@ body {
   color: #5cc91d; /* Set the text color */
   letter-spacing: 2px; /* Adjust letter spacing */
 }
+
+.component__spinner {
+  border: 4px solid rgb(255, 111, 200);
+  border-left-color: #97477a;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+      transform: rotate(360deg);
+  }
+}
