--- a/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
@@ -4,20 +4,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Verdana&display=swap');
 .content
 {
-    width: 1300px;
+    width: 70%;
     background-color: black;
     background-color: white;
-    border-top: 1px solid rgb(216, 220, 223);
-    border-bottom: 1px solid rgb(216, 220, 223);
+    // border-top: 1px solid rgb(216, 220, 223);
+    // border-bottom: 1px solid rgb(216, 220, 223);
     display: flex;
     flex-direction: row;
     // padding: 10px 0 10px 0;
     box-shadow:0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    padding: 10px;
+    // padding: 10px;
 }
 .action{
     position: fixed;
-    left: 89%;
+    left: 86%;
     top: 27%;
     display: flex;
     flex-direction: column;
@@ -38,9 +38,9 @@
 {
     color: black;
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Tạo hai cột bằng độ rộng tự động */
-    gap: 10px;
-    font-size: 16px;
+    grid-template-columns: repeat(3, 0.7fr); /* Tạo hai cột bằng độ rộng tự động */
+    gap: 5px;
+    font-size: 13px;
     :hover{
         
         color:var(--color-hover);
