--- a/frontend/src/components/Layout/ReadLayout/components/DownloadGroup/DownloadGroup.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/components/DownloadGroup/DownloadGroup.module.scss
@@ -1,6 +1,6 @@
 .group-download {
     position: absolute;
-    top: 115px;
+    top: 0;
     left: 0;
     display: flex;
     flex-direction: column;
