--- a/frontend/src/components/Layout/ReadLayout/components/Dropdown/Dropdown.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/components/Dropdown/Dropdown.module.scss
@@ -9,14 +9,15 @@
     position: absolute;
     display: flex;
     flex-direction:row;
-    justify-content: center;
-    align-items: center;
     border: 1px solid var(--color-hover);
     border-radius: 5px;
-    padding: 5px;
+    padding: 2px;
     width: 200px;
     height: var(--height-button);
     cursor: pointer;
+    overflow: hidden; 
+    // white-space: nowrap; 
+    text-overflow: ellipsis;
 }
 
 .dropdown-listcontext
@@ -34,6 +35,7 @@
     border-radius: 5px;
     // border: 2px solid #9d98c6;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); 
+    z-index: 999;
 
 }
 .top
