--- a/frontend/src/components/Layout/ReadLayout/Header/Header.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Header/Header.module.scss
@@ -8,7 +8,7 @@
     border-bottom:1px solid #e9ecef;
     background-color: #f8f9fa;
 }
-.history_setting
+.header__history-setting
 {
     display: flex;
     flex-direction: column;
