--- a/frontend/src/components/Layout/ReadLayout/components/Setting/Setting.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/components/Setting/Setting.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     position: relative;
 }
-.icon_setting
+.setting__icon
 {
     font-size: 36px;    
     cursor: pointer;
