--- a/frontend/src/components/Layout/ReadLayout/components/Title/Title.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/components/Title/Title.module.scss
@@ -1,15 +1,15 @@
-.title, .title_name, .title_chapter{
+.title, .title__name, .title__chapter{
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.title_name{
+.title__name{
     font-size: 32px;
     color: var(--color-button);
 }
-.title_chapter{
+.title__chapter{
     font-size: 20px;
     color: var(--color-hover);
 }
