--- a/frontend/src/components/Layout/ReadLayout/Nav/Nav.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Nav/Nav.module.scss
@@ -4,13 +4,13 @@
     flex-direction: column;
     align-items: center;
 }
-.nav-domains
+.nav__domains
 {
     margin: 10px 0 0 0;
     display: flex;
     flex-direction: row;
 }
-.domain
+.nav__domains-domain
 {
     padding: 10px;
     border-radius: 5px;
@@ -26,12 +26,12 @@
     color: black;
     border: 1px solid var(--color-button);
 }
-.domain:hover
+.nav__domains-domain:hover
 {
     background-color: var(--color-hover);
     color: white;
 }
-.nav-action
+.nav__action
 {
     display: flex;
     flex-direction: row;
