--- a/frontend/src/components/Layout/ReadLayout/ReadLayout.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/ReadLayout.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
 }
-.container
+.readlayout__container
 {
     position: relative;
     margin-top: 20px;
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
 }
-.footer
+.readlayout__footer
 {
     margin-top: 30px;
 }
